--- a/Backend - SpringBoot 2.6/onlinebankingservices/src/main/resources/application.properties
+++ b/Backend - SpringBoot 2.6/onlinebankingservices/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/online_banking
 spring.datasource.username=root
 spring.datasource.password=qwerty123
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
+
