--- a/Backend - SpringBoot 2.6/onlinebankingservices/pom.xml
+++ b/Backend - SpringBoot 2.6/onlinebankingservices/pom.xml
@@ -56,6 +56,15 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+    <version>2.6.13</version>
+</dependency>
+
+		
 	</dependencies>
 
 	<build>
