--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.8",
+    "react-twitter-login": "^1.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
