--- a/Backend SprintBoot Update/onlinebankingservices/src/main/resources/application.properties
+++ b/Backend SprintBoot Update/onlinebankingservices/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/online_banking
 spring.datasource.username=root
-spring.datasource.password=Password@1
+spring.datasource.password=qwerty123
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 
