--- a/Backend SprintBoot Update/onlinebankingservices/src/main/resources/application.properties
+++ b/Backend SprintBoot Update/onlinebankingservices/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/online_banking
 spring.datasource.username=root
-spring.datasource.password=qwerty123
+spring.datasource.password=Password@1
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=onlinebankingserviceswf@gmail.com
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=onlinebankingserviceswf@gmail.com
 #spring.password=Password#CP123
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
